--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,6 +94,6 @@ dependencies {
     compile files('libs/umeng_social_shareboard.jar')
     compile files('libs/umeng_social_shareview.jar')
     compile files('libs/umeng_social_tool.jar')
-    //
+    //xUtils
     compile 'org.xutils:xutils:3.3.22'
 }
