1.清除无用的资源文件 2.去掉piccsso图片加载框架，改用xUtils 3.清除无用的java文件

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,7 +58,7 @@ dependencies {
     //XRefreshView
     compile 'com.google.code.gson:gson:2.7'
     //gson
-    compile 'com.squareup.picasso:picasso:2.5.2'
+//    compile 'com.squareup.picasso:picasso:2.5.2'
     //picasso
     compile 'com.android.support:recyclerview-v7:25.0.0'
     //glide
