--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,7 +54,7 @@
         android:name="com.hover.hf.AppContext"
         android:allowBackup="true"
         android:hardwareAccelerated="true"
-        android:icon="@mipmap/cartoon01"
+        android:icon="@mipmap/app_icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
